PN-7737: modifica check flag annullamento